--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
     </properties>
     
     <dependencies>
+        
+        <!-- Para Jakarta EE 10 (Tomcat 10) -->
+        <dependency>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>3.0.1</version>
+        </dependency>
         <!-- Jakarta EE API -->
         <dependency>
             <groupId>jakarta.platform</groupId>
